--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate"
                   href="#tentang">Tentang</a></li>
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate"
-                  href="#project">Project</a></li>
+                  href="#project">Project</a>
+              </li>
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate"
                   href="#archievments">Archievments</a>
               </li>
@@ -141,7 +142,7 @@
             <p class="fs--1 fs-md-0">Saya Muhammad Ryan
               Afrizal, fresh
               graduete S-1 Ilmu Komputer dari Universitas Lambung Mangkurat. Saya
-              memiliki 2 tahun pengalaman pada bidang Web Development, Motion Graphics Design Graphics Design dan
+              memiliki 3 tahun pengalaman pada bidang Web Development, Motion Graphics Design Graphics Design dan
               Video Editing. Saya juga menyukai dan
               memiliki minat penelitian
               bidang Data
