--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
           <div class="col-12 col-lg-auto mb-lg-0 wow fadeInUp" data-wow-delay="0.1s"><a
               class="d-flex align-items-center fw-semi-bold fs-3" href="#">
             </a>
-            <p class="my-3 text-100 fw-light">Barabai, Kalimantan Selatan<br />
+            <p class="my-3 text-100 fw-light">Banjarbaru, Kalimantan Selatan<br />
               <span class="fw-bold">Indonesia</span>
             </p>
           </div>
@@ -1110,6 +1110,11 @@
               <li class="list-inline-item btn-animate"><a class="text-decoration-none"
                   href="https://github.com/mryanafz" target="_blank">
                   <i class="bi bi-github text-white fs-1"></i>
+                </a>
+              </li>
+              <li class="list-inline-item btn-animate"><a class="text-decoration-none"
+                  href="https://www.linkedin.com/in/muhammad-ryan-afrizal" target="_blank">
+                  <i class="bi bi-linkedin text-white fs-1"></i>
                 </a>
               </li>
             </ul>
