--- a/index.html
+++ b/index.html
@@ -753,6 +753,49 @@
               <div class="owl-stage-outer">
                 <div class="owl-stage">
                   <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
+                    <div class="row justify-content-center px-lg-5 mb-2">
+                      <div class="col-md-4 mb-4 px-5 px-md-3">
+                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
+                          <img src="assets/img/arc/revou-damc.jpg" class="img-fluid rounded-border" alt="">
+                          <div class="portfolio-links">
+                            <a href="assets/img/arc/revou-damc.jpg" data-gallery="portfolioGallery"
+                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Intro to Data
+                              Analytics
+                              <br>
+                              <span class="fs--1 text-gray-100">REVOU</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-4 px-5 px-md-3">
+                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
+                          <img src="assets/img/arc/bisa-ml-sklearn.jpg" class="img-fluid rounded-border" alt="">
+                          <div class="portfolio-links">
+                            <a href="assets/img/arc/bisa-ml-sklearn.jpg" data-gallery="portfolioGallery"
+                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Machine Learing
+                              dengan Scikit-Learn Python
+                              <br>
+                              <span class="fs--1 text-gray-100">BISA.AI CERTIFIED</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-4 px-5 px-md-3">
+                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
+                          <img src="assets/img/arc/bisa-da.jpg" class="img-fluid rounded-border" alt="">
+                          <div class="portfolio-links">
+                            <a href="assets/img/arc/bisa-da.jpg" data-gallery="portfolioGallery"
+                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Big Data
+                              Analytics dengan PySpark
+                              <br>
+                              <span class="fs--1 text-gray-100">BISA.AI CERTIFIED</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
                     <div class="row px-lg-5 mb-2">
                       <div class="col-md-4 mb-4 px-5 px-md-3">
                         <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
@@ -968,23 +1011,6 @@
                               Pemula
                               <br>
                               <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
-                    <div class="row justify-content-center px-lg-5 mb-2">
-                      <div class="col-md-4 mb-4 px-5 px-md-3">
-                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                          <img src="assets/img/arc/bisa-ml-sklearn.jpg" class="img-fluid rounded-border" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/arc/bisa-ml-sklearn.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Machine Learing
-                              dengan Scikit-Learn Python
-                              <br>
-                              <span class="fs--1 text-gray-100">BISA.AI CERTIFIED</span>
                             </a>
                           </div>
                         </div>
