--- a/index.html
+++ b/index.html
@@ -642,6 +642,43 @@
                         <div class="col-md-6 mb-4">
                           <div class="card h-100 card-span btn-animate rounded-border">
                             <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/pelantikan-idi.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/10xBx7QyGucTt0DPUZkC6gFl2HKoGxHTW/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>IDI Wilayah
+                                Kalimantan Selatan</span>
+                              <h5 class="fs-0 my-3">
+                                Pelantikan IDI Wilayah Kalimantan Selatan</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/hari-bidan.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/1tGuoxVbpKzWxv9qbAS5a_2wGBVKKpwbX/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>RSI Sultan Agung
+                                Banjarbaru</span>
+                              <h5 class="fs-0 my-3">Hari Bidan Nasional</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
+                      <div class="row px-lg-5 mb-2">
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
                               <img src="assets/img/thumb/stat.jpg" alt="">
                               <button style="background: none; border: none;" class="play"
                                 data-url='https://www.youtube.com/embed/fOeQovaJ84o'><i
@@ -710,6 +747,119 @@
                               <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>BPS Kota
                                 Banjarbaru</span>
                               <h5 class="fs-0 my-3">Sensus Penduduk 2020</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
+                      <div class="row px-lg-5 mb-2">
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/idul-adha.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/19WCeZbIdjti_a0CcKJXSocFF0cCNHyaE/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>RSI Sultan Agung
+                                Banjarbaru</span>
+                              <h5 class="fs-0 my-3">
+                                Hari Raya Idul Adha 1443H</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/qurban.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/1Tlk4BchAVafGImg_ZHzhM7JQvUBuJgs5/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>RSI Sultan Agung
+                                Banjarbaru</span>
+                              <h5 class="fs-0 my-3">Pelaksanaan Qurban RSI Sultan Agung Banjarbaru</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
+                      <div class="row px-lg-5 mb-2">
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/hari-anak.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/1jdyQYE_L4v7XnTTxEglAvMwmFY5PmeT8/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>RSI Sultan Agung
+                                Banjarbaru</span>
+                              <h5 class="fs-0 my-3">
+                                Hari Anak Nasional</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/seminar-asma.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/1HBQW89tFwEOKf7jqKe2hmt2librE_9GL/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>RSI Sultan Agung
+                                Banjarbaru</span>
+                              <h5 class="fs-0 my-3">Seminar Kesehatan Penyakit Asma & Gathering Bersama FKTP</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
+                      <div class="row px-lg-5 mb-2">
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/bpjs.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/160_5v151AdsnFcRlsOKRLRYJBZk-IJ4T/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>RSI Sultan Agung
+                                Banjarbaru</span>
+                              <h5 class="fs-0 my-3">
+                                Pelayanan BPJS Kesehatan RSI Sultan Agung
+                                Banjarbaru</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                          <div class="card h-100 card-span btn-animate rounded-border">
+                            <div class="ratio ratio-16x9">
+                              <img src="assets/img/thumb/pelantikan.jpg" alt="">
+                              <button style="background: none; border: none;" class="play"
+                                data-url='https://drive.google.com/file/d/18Z4tmffn8O-HY-ga8gLbvotlEghsR_FK/preview'><i
+                                  class="bi bi-play-fill text-white fs-7"></i>
+                              </button>
+                            </div>
+                            <div class="card-body">
+                              <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>RSI Sultan Agung
+                                Banjarbaru</span>
+                              <h5 class="fs-0 my-3">
+                                Penyerahan Sertifikat RS Syariah dan Seminar RS Syariah</h5>
                             </div>
                           </div>
                         </div>
@@ -1048,7 +1198,7 @@
         <div class="row flex-center h-100">
           <div class="col-xl-10">
             <div class="row h-100 justify-content-center">
-              <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="col-md-3 mb-3 wow fadeInUp" data-wow-delay="0.1s">
                 <a href="https://www.instagram.com/mryanafz" target="_blank">
                   <div class="card h-100 shadow card-span zoom">
                     <div class="card-body text-center pb-3 px-0">
@@ -1058,22 +1208,32 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="col-md-3 mb-3 wow fadeInUp" data-wow-delay="0.3s">
                 <a href="mailto:ryan.afrizal55@gmail.com" target="_blank">
                   <div class="card h-100 shadow card-span zoom">
                     <div class="card-body text-center pb-3 px-0">
                       <i class="bi bi-envelope-open fs-5 text-primary"></i>
-                      <p class="fw-normal mb-0 text-1000">ryan.afrizal55@gmail.com</p>
+                      <p class="fw-normal mb-0 text-1000 h6">ryan.afrizal55@gmail.com</p>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="0.5s">
+              <div class="col-md-3 mb-3 wow fadeInUp" data-wow-delay="0.5s">
                 <a href="https://api.whatsapp.com/send?phone=6285391024203" target="_blank">
                   <div class="card h-100 shadow card-span zoom">
                     <div class="card-body text-center pb-3 px-0">
                       <i class="bi bi-whatsapp fs-5 text-primary"></i>
                       <p class="fw-normal mb-0 text-1000">+6285391024203</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-3 mb-3 wow fadeInUp" data-wow-delay="0.5s">
+                <a href="https://www.linkedin.com/in/muhammad-ryan-afrizal/" target="_blank">
+                  <div class="card h-100 shadow card-span zoom">
+                    <div class="card-body text-center pb-3 px-0">
+                      <i class="bi bi-linkedin fs-5 text-primary"></i>
+                      <p class="fw-normal mb-0 text-1000 h6">Muhammad Ryan Afrizal</p>
                     </div>
                   </div>
                 </a>
@@ -1148,7 +1308,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-auto mb-2">
-            <p class="mb-0 fs-0 mb-3 text-100">&copy; 2022
+            <p class="mb-0 fs-0 mb-3 text-100">&copy; 2023
             </p>
           </div>
         </div>
